<resources>
    <string name="app_name">SmartCarCleaner</string>
    <string name="app_version_placeholder">v%s-%s</string>
    <string name="app_flavor_placeholder">%s</string>
    <string name="app_build_type_placeholder">%s</string>
    <string name="app_error_placeholder">Error: 000 - Placeholder error message</string>

    <!--    Login       -->
    <string name="login_username_input_hint">Username</string>
    <string name="login_password_input_hint">Password</string>
    <string name="login_submit_button_text">Login</string>
    <string name="login_register_link">Sign up now!</string>
    <string name="login_forgot_password_link">Reset password</string>

    <!--    Register    -->
    <string name="register_username_input_hint">Username</string>
    <string name="register_email_input_hint">Email</string>
    <string name="register_phone_input_hint">Phone no.</string>
    <string name="register_password_input_hint">Password</string>
    <string name="register_confirm_password_input_hint">Confirm password</string>
    <string name="register_submit_button_text">Register</string>
</resources>
